<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_music"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="361dp"
        android:layout_height="92dp"
        android:layout_marginTop="92dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/postylyrics_n_instant_lyrics_search"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchImageView"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:contentDescription="@string/searchsection"
        android:outlineProvider="paddedBounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_search_black_18dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="197dp"
        android:layout_height="39dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#FFC107"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/faveImageView"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:contentDescription="@string/favesection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="@+id/searchImageView"
        app:layout_constraintTop_toBottomOf="@+id/mainTextView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_favorite_border_black_18dp" />

    <ImageView
        android:id="@+id/adjustImageView"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:contentDescription="@string/adjustsection"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/baseline_tune_black_18dp" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginTop="128dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/artist_song_or_name"
        android:inputType="none|textPersonName"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#A5B8B6"
        app:layout_constraintBottom_toTopOf="@+id/faveImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextView"
        app:layout_constraintVertical_bias="0.212" />

    <ImageView
        android:id="@+id/searchNearText"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="128dp"
        android:backgroundTint="#03A9F4"
        android:contentDescription="@string/searchhere"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/searchImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTextView"
        app:layout_constraintVertical_bias="0.189"
        app:srcCompat="@drawable/baseline_search_black_18dp" />

    <ImageView
        android:id="@+id/infoImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFC107"
        android:contentDescription="@string/infoimageview"
        app:layout_constraintBottom_toBottomOf="@+id/mainTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        app:srcCompat="@drawable/baseline_info_black_18dp" />

</androidx.constraintlayout.widget.ConstraintLayout>